# wakskev

./: .gitignore  CNAME  README.md  index.html  pyproject.toml
apps/placeholder/: admin.py  apps.py  models.py
apps/placeholder/migrations/: 0001_initial.py
assets/: main.css  main.js
assets/css/: main.css
assets/html/: about.html  contact.html  portfolio-details.html  portfolio.html  resume.html  service-details.html  services.html  starter-page.html
assets/js/: birthday.js  main.js
conf/: asgi.py  settings.py  urls.py  wsgi.py
old/base/static/base/js/: script.js
old/home/templates/home/: index.html
old/wakskevin/: settings.py
profile/: README.md
